Fix width overflow on homepage on firefox

--- a/less/home.less
+++ b/less/home.less
@@ -45,6 +45,7 @@
 					background: rgba(255, 255, 255, 0.04);
 					padding: 1em 0;
 					position: relative;
+					overflow: hidden;
 					//box-shadow: @blue-40-transparent 0 0 30px 15px;
 
 					&.hidden {
